# running-coach-skill

./: .gitignore  README.md  SKILL.md
references/: ATHLETE.md  methodology.md  onboarding.md
running-coach-memory-mcp/: .env.example  README.md  pyproject.toml  schema.sql
running-coach-memory-mcp/memory_mcp/: __init__.py  config.py  database.py  embeddings.py  logging.py  models.py  server.py
running-coach-memory-mcp/memory_mcp/tools/: __init__.py  memory.py  memory_md.py  plan.py  status.py
running-coach-memory-mcp/tests/: conftest.py  test_memory.py  test_models.py  test_plan.py  test_status.py
running-coach-plugin/: .mcp.json
running-coach-plugin/.claude-plugin/: plugin.json
running-coach-plugin/agents/: exporter.md  running-coach.md
running-coach-plugin/skills/athlete/: SKILL.md
running-coach-plugin/skills/garmin/: SKILL.md
running-coach-plugin/skills/garmin/references/: eufy-to-garmin.md  fit.md  workouts.md
running-coach-plugin/skills/garmin/scripts/: eufy_to_garmin.py  eufy_to_json.py  interval-run.py  simple-run.py  upload_body_composition.py
running-coach-plugin/skills/ical/: SKILL.md
running-coach-plugin/skills/running-coach/: SKILL.md
running-coach-plugin/skills/running-coach-memory-mcp/: SKILL.md
running-coach-plugin/skills/running-coach-memory-mcp/references/: memories.md  plans.md
running-coach-plugin/skills/running-coach/agents/: exporter.md
running-coach-plugin/skills/running-coach/assets/: template-ATHLETE.md
running-coach-plugin/skills/running-coach/references/: onboarding.md
